--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "latest",
     "node-fetch": "^2.6.7",
     "crypto-js": "^4.1.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@vercel/kv": "latest"
   }
 }
