--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "node-fetch": "^2.6.7",
     "crypto-js": "^4.1.1",
     "uuid": "^8.3.2",
-    "@vercel/kv": "latest"
+    "redis": "^4.6.0"
   }
 }
