--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "radarr-tmdb-mvp",
-  "version": "1.0.0",
+  "name": "moviecurator",
+  "version": "2.0.0",
   "private": true,
+  "description": "Create custom movie lists for Radarr by actor and director",
+  "keywords": ["radarr", "plex", "jellyfin", "emby", "movies", "tmdb"],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "node-fetch": "^2.6.7",
-    "crypto-js": "^4.1.1",
-    "uuid": "^8.3.2",
+    "next": "14.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "crypto-js": "^4.2.0",
+    "uuid": "^9.0.1",
     "redis": "^4.6.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
-}
