--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ TMDB_HEALTH_CHECK=true               # Enable TMDb API health checks
 # Advanced: Redis Configuration
 REDIS_MAXMEMORY=256mb                # Redis memory limit
 REDIS_POLICY=allkeys-lru             # Redis eviction policy
+REDIS_URL=redis://localhost:6379
