--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ ACME_EMAIL=admin@yourdomain.com      # Email for Let's Encrypt SSL
 # Optional: TMDb Health Monitoring
 TMDB_HEALTH_CHECK=true               # Enable TMDb API health checks
 
+# Demo API Key (for public demo functionality)
+# Get a dedicated API key for demo use to prevent abuse of your personal key
+TMDB_DEMO_API_KEY=your_demo_tmdb_api_key_here
+
 # Advanced: Redis Configuration
 REDIS_MAXMEMORY=256mb                # Redis memory limit
 REDIS_POLICY=allkeys-lru             # Redis eviction policy
