--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "dev": "next dev",
     "build": "next build", 
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "uuid": "^9.0.1",
-    "redis": "^4.6.0"
+    "uuid": "9.0.1",
+    "redis": "4.6.8"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.32",
+    "tailwindcss": "3.3.6",
+    "jest": "29.7.0",
+    "@testing-library/react": "13.4.0"
   },
   "engines": {
     "node": ">=18.0.0"
