--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "postcss": "8.4.32",
     "tailwindcss": "3.3.6",
     "jest": "29.7.0",
-    "@testing-library/react": "13.4.0"
+    "@testing-library/react": "13.4.0",
+    "@testing-library/jest-dom": "6.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"],
+    "testPathIgnorePatterns": ["<rootDir>/.next/", "<rootDir>/node_modules/"]
   }
 }
